# ncnn-android-yolo-picture-stream

./: README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: yolov10n.param  yolov10s.param  yolov11n-falldown-ncnn.param
app/src/main/java/com/tencent/yoloncnn/: CameraUtil.java  MainActivity.java  Object.java  YoloNcnn.java
app/src/main/jni/: CMakeLists.txt  hepler.cpp  hepler.h  yolo.cpp  yolo.h  yoloncnn.cpp
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
